patient list either getPatient/getCollection

--- a/src/app/generate-report/generate-report.component.html
+++ b/src/app/generate-report/generate-report.component.html
@@ -1,1 +1,55 @@
-<p>generate-report works!</p>
+<div class="search-div">
+  <button mat-raised-button>
+    <mat-icon>add</mat-icon>Create
+  </button>
+ <!-- <mat-form-field class="search-form-field" floatLabel="never">
+    <input matInput [(ngModel)]="searchKey" placeholder="Search" autocomplete="off" (keyup)="applyFilter()">
+    <button mat-button matSuffix mat-icon-button aria-label="Clear"*ngIf="searchKey"  (click)="onSearchClear()">
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-form-field>-->
+</div>
+  <table class="mat-elevation-z8" mat-table [dataSource]="dataSource"  matSort>
+    <ng-container matColumnDef="testID">
+      <mat-header-cell *matHeaderCellDef  mat-sort-header>Test ID </mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.testID}}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="result">
+      <mat-header-cell *matHeaderCellDef  mat-sort-header>Result</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.result}}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="resultDate">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Result Date</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.resultDate| date : "dd-MM-yyyy"}}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="status">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.status}}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="tester">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Tester</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.tester}}</mat-cell>
+    </ng-container>
+   <!-- <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef></mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <button mat-icon-button><mat-icon>launch</mat-icon></button>
+      </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="loading">
+      <mat-footer-cell *matFooterCellDef colspan="6">
+        Loading data...
+      </mat-footer-cell>
+    </ng-container>
+    <ng-container matColumnDef="noData">
+      <mat-footer-cell *matFooterCellDef colspan="6">
+        No data.
+      </mat-footer-cell>
+    </ng-container>-->
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+   <!---<mat-footer-row *matFooterRowDef="['loading']" [ngClass]="{'hide':dataSource!=null}"></mat-footer-row>
+    <mat-footer-row *matFooterRowDef="['noData']" [ngClass]="{'hide':!(dataSource!=null && dataSource.length==0)}"></mat-footer-row>-->
+  </table>
+  <!--<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5" showFirstLastButtons></mat-paginator>-->
+
