--- a/src/app/patient-list/patient-list.component.html
+++ b/src/app/patient-list/patient-list.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="patients"  class="mat-elevation-z8">
+<table mat-table [dataSource]="patients" *ngFor="let p of patients"  class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
@@ -7,13 +7,13 @@
     <th mat-header-cell *matHeaderCellDef> Username </th>
     <td mat-cell *matCellDef="let patient"> {{patient.username}} </td>
   </ng-container>
-  
+
   <!-- Password Column -->
   <ng-container matColumnDef="password">
     <th mat-header-cell *matHeaderCellDef> Password </th>
     <td mat-cell *matCellDef="let patient"> {{patient.password}} </td>
   </ng-container>
-  
+
   <!-- Full Name Column -->
   <ng-container matColumnDef="fullName">
     <th mat-header-cell *matHeaderCellDef> Full Name </th>
@@ -43,43 +43,64 @@
     <th mat-header-cell *matHeaderCellDef> Date of Birth </th>
     <td mat-cell *matCellDef="let patient"> {{patient.birthday}} </td>
   </ng-container>
-  
+
   <!-- Phone Number Column -->
   <ng-container matColumnDef="phoneNo">
     <th mat-header-cell *matHeaderCellDef> Phone Number </th>
     <td mat-cell *matCellDef="let patient"> {{patient.phoneNo}} </td>
   </ng-container>
-  
+
   <!-- Address Column -->
   <ng-container matColumnDef="address">
     <th mat-header-cell *matHeaderCellDef> Address </th>
     <td mat-cell *matCellDef="let patient"> {{patient.address}} </td>
   </ng-container>
-  
+
   <!-- Zip Code Column -->
   <ng-container matColumnDef="zip">
     <th mat-header-cell *matHeaderCellDef> Zip Code </th>
     <td mat-cell *matCellDef="let patient"> {{patient.zip}} </td>
   </ng-container>
-  
+
   <!-- City Column -->
   <ng-container matColumnDef="city">
     <th mat-header-cell *matHeaderCellDef> City </th>
     <td mat-cell *matCellDef="let patient"> {{patient.city}} </td>
   </ng-container>
-  
+
   <!-- Country Column -->
   <ng-container matColumnDef="country">
     <th mat-header-cell *matHeaderCellDef> Country </th>
     <td mat-cell *matCellDef="let patient"> {{patient.country}} </td>
   </ng-container>
-  
+
   <!-- State Column -->
   <ng-container matColumnDef="state">
     <th mat-header-cell *matHeaderCellDef> State </th>
     <td mat-cell *matCellDef="let patient"> {{patient.state}} </td>
   </ng-container>
-  
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<!--testing
+<mat-accordion multi="true"  *ngIf ="patients.length > 0">
+  <mat-expansion-panel *ngFor="let p of patients">
+    <mat-expansion-panel-header>
+    {{p.fullName}}
+
+    </mat-expansion-panel-header>
+    <p>{{p.country}}</p>
+    <mat-action-row>
+      <span class="example-spacer"></span>
+      <button mat-button color="primary" routerLink="/create">EDIT</button>
+      <button mat-button color="warn"  routerLink="/list">DELETE</button>
+    </mat-action-row>
+
+  </mat-expansion-panel>
+
+</mat-accordion>
+-->
+
+<p class="info-text mat-body-1" *ngIf ="patients.length <= 0" >No testkit added yet</p>
