--- a/src/app/generate-report/generate-report.component.css
+++ b/src/app/generate-report/generate-report.component.css
@@ -1,30 +1,43 @@
 /* mat-table */
-mat-footer-row mat-footer-cell{
+mat-footer-row mat-footer-cell {
   justify-content: center;
   font-style: italic;
 }
 
 /* filter controls */
-.search-div{
+.search-div {
   margin: 10px;
-    }
-    .search-form-field{
-        width: 60%;
-        margin-left: 10px;
-        padding: 5px 10px;
-        background-color: #f5f5f5;
-        border-radius: 5px;
-        }
-        .search-form-field div.mat-form-field-underline {
-            display: none;
-        }
-        .search-form-field div.mat-form-field-infix{
-            border-top: 0px;
-        }
-        .search-form-field div.mat-form-field-wrapper{
-          padding-bottom: 0px;
-      }
-      .search-form-field div.mat-form-field-suffix button{
-          height: 32px;
-          width: 32px;
-      }
+
+}
+mat-form-field{
+  margin: 0;
+}
+.search-form-field {
+  width: 80%;
+
+  padding: 0px 10px;
+padding-top: 10px;
+  margin: auto;
+  border-radius: 5px;
+}
+
+.search-form-field {
+  background-color: #ffc05f;
+}
+
+input.mat-input{
+  background-color: #ffffff;
+}
+.search-form-field mat-form-field-underline {
+  display: none;
+}
+.search-form-field div.mat-form-field-infix {
+  border-top: 0px;
+}
+.search-form-field div.mat-form-field-wrapper {
+  padding-bottom: 0px;
+}
+.search-form-field div.mat-form-field-suffix button {
+  height: 32px;
+  width: 32px;
+}
