--- a/src/app/view-test/view-test.component.html
+++ b/src/app/view-test/view-test.component.html
@@ -1,6 +1,7 @@
 <div class="container">
 
   <h1>Covid-19 Test Result</h1>
+  <mat-dialog-content>
   <mat-card style="padding:30px 80px">
     <h2>Covid-19 Test Report Card</h2>
     <mat-card-content>
@@ -56,7 +57,7 @@
             <input matInput disabled>
           </mat-form-field>
         </div>
-        
+
         <div fxFlex="50">
           <h4>Identity Card Number/Passport Number</h4>
           <mat-form-field appearance="fill">
@@ -166,8 +167,8 @@
         </mat-form-field>
       </div>
 
-    </mat-card-content>	
+    </mat-card-content>
   </mat-card>
 
-
+</mat-dialog-content>
 </div>
