--- a/src/app/view-test/view-test.component.html
+++ b/src/app/view-test/view-test.component.html
@@ -152,6 +152,11 @@
           </mat-form-field>
         </div>
       </div>
+      <h4>Symptoms</h4>
+      <mat-form-field appearance="fill">
+        <mat-label></mat-label>
+        <input matInput disabled>
+      </mat-form-field>
       <mat-divider></mat-divider>
       <h3>Test Result</h3>
       <div>
