added-update report

--- a/src/app/generate-report/generate-report.component.html
+++ b/src/app/generate-report/generate-report.component.html
@@ -40,11 +40,18 @@ fxLayoutGap.xs="0">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Tester</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element.tester}}</mat-cell>
     </ng-container>
-    <ng-container matColumnDef="viewPatient">
-      <mat-header-cell *matHeaderCellDef> Patient Details</mat-header-cell>
-      <mat-cell *matCellDef="let row" >
-<mat-dialog-actions>
-        <button mat-icon-button  (click)="onViewReport(row)"> <mat-icon>launch</mat-icon></button>
+    <ng-container matColumnDef="patientType">
+      <mat-header-cell *matHeaderCellDef>Action</mat-header-cell>
+      <mat-cell *matCellDef="let element" >
+      <mat-dialog-actions>
+        <button mat-icon-button  (click)="onViewReport(row)"> 
+          <span *ngIf="element.patientType === 'Completed'">View</span>
+          <span *ngIf="element.patientType === 'Pending'">Update</span>
+          
+          <mat-icon style="padding:0;">
+            launch
+          </mat-icon>
+        </button>
       </mat-dialog-actions>
       </mat-cell>
     </ng-container>
