changed-navbar-title

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -50,7 +50,7 @@
         <mat-icon>science</mat-icon><span class="nav-caption">Manage Test Kit Stock</span>
       </a>
       <a mat-list-item routerLink="/generateReport" (click)="sidenav.toggle()">
-        <mat-icon>receipt_long</mat-icon><span class="nav-caption">Generate Test Report</span>
+        <mat-icon>receipt_long</mat-icon><span class="nav-caption">View & Update Test List</span>
       </a>
       <a mat-list-item routerLink="/recordTest" (click)="sidenav.toggle()">
         <mat-icon>drafts</mat-icon><span class="nav-caption">Record New Test</span>
