--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,7 +37,7 @@
     </mat-nav-list>-->
     <div>
     <mat-nav-list>
-      <a mat-list-item routerLink="/home" (click)="sidenav.toggle()">
+      <a mat-list-item routerLink="/homepage" (click)="sidenav.toggle()">
           <mat-icon>home</mat-icon> <span class="nav-caption">Home</span>
       </a>
       <a mat-list-item routerLink="/testcentre" (click)="sidenav.toggle()">
