change-getting-started-button-linkage

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -5,7 +5,7 @@
     </div> 
       <h1 class="title-desc">The CTS is a data management tool to track Covid-19 cases. With the ability to scale irrespective of where, how and what test is carried out.</h1>
     <div class="button-container">
-      <button class="button" mat-raised-button routerLink="/testcentre">Getting Started</button>
+      <button class="button" mat-raised-button routerLink="/login">Getting Started</button>
     </div>
   </div>
   
