--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -61,7 +61,7 @@
     </mat-nav-list>
   </div>
   </mat-sidenav>
-  <mat-sidenav-content style="">
+  <mat-sidenav-content >
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
