--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -36,8 +36,10 @@ mat-toolbar {
 }
 mat-sidenav-content {
  background-image: linear-gradient(180deg, #3196e2, #53d2dc);
-  height: 100%;
-  margin:auto;
+ margin: 0 auto;
+ overflow-x: hidden;
+ width: 100%;
+ margin-bottom: 50px;
    /* height: 100%;
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url("/assets/b.jpg") no-repeat center;
   background-size: cover;
