--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -8,27 +8,28 @@
   height: 102vh;
   display:flex;
   flex-direction: column;
+
 }
 
 .title-container{
   height: 94vh;
+  overflow-x: hidden;
 }
 
 .button-container{
-  margin-top: 7em;
-  display:flex; 
+  margin-top: 50px;
+  display:flex;
   justify-content: center;
-  
+
 }
 
 .title-textbox{
-  display:flex; 
+  display:flex;
   justify-content: center;
-  
+
 }
-.button{
-  width: 15vw;
-  height: 8vh;
+button{
+  padding: 10px 30px;
   font-size: 1em;
 }
 .title-desc{
@@ -39,13 +40,14 @@
 
 .title{
   color:white;
-  font-size: 4em ;  
+  font-size: 4em ;
   font-weight: 500;
   vertical-align: middle;
-  
+
 }
 
 mat-card{
-  padding:30px 80px; 
-  margin: 30px
+  padding:30px 80px;
+  margin: 30px;
+  /*background-color: #FFC05F;*/
 }
