--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -61,8 +61,8 @@
     </mat-nav-list>
   </div>
   </mat-sidenav>
-  <mat-sidenav-content style="">
-    <router-outlet></router-outlet>
+  <mat-sidenav-content>
+    <router-outlet style="overflow:visible;"></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
  <!--<mat-toolbar>
