changed-theme-color

--- a/src/app/generate-report/generate-report.component.html
+++ b/src/app/generate-report/generate-report.component.html
@@ -1,4 +1,4 @@
-<h1>Test List</h1>
+<h1 style="color:white">Test List</h1>
 <div class="container">
 <div class="search-div"  fxLayout
 fxLayout.md="column"
