--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,25 +37,25 @@
     </mat-nav-list>-->
     <div>
     <mat-nav-list>
-      <a mat-list-item routerLink="/homepage" (click)="sidenav.toggle()">
+      <a class="nav-item" mat-list-item routerLink="/homepage" (click)="sidenav.toggle()">
           <mat-icon>home</mat-icon> <span class="nav-caption">Home</span>
       </a>
-      <a mat-list-item routerLink="/testcentre" (click)="sidenav.toggle()">
+      <a class="nav-item" mat-list-item routerLink="/testcentre" (click)="sidenav.toggle()">
           <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Register Test Centre</span>
       </a>
-      <a mat-list-item routerLink="/recordOfficer" (click)="sidenav.toggle()">
+      <a class="nav-item" mat-list-item routerLink="/recordOfficer" (click)="sidenav.toggle()">
           <mat-icon>group_add</mat-icon><span class="nav-caption">Record Test Centre Officer</span>
       </a>
-      <a mat-list-item routerLink="/manageTestKit" (click)="sidenav.toggle()">
+      <a class="nav-item" mat-list-item routerLink="/manageTestKit" (click)="sidenav.toggle()">
         <mat-icon>science</mat-icon><span class="nav-caption">Manage Test Kit Stock</span>
       </a>
-      <a mat-list-item routerLink="/generateReport" (click)="sidenav.toggle()">
+      <a class="nav-item" mat-list-item routerLink="/generateReport" (click)="sidenav.toggle()">
         <mat-icon>receipt_long</mat-icon><span class="nav-caption">View & Update Test List</span>
       </a>
-      <a mat-list-item routerLink="/recordTest" (click)="sidenav.toggle()">
+      <a class="nav-item" mat-list-item routerLink="/recordTest" (click)="sidenav.toggle()">
         <mat-icon>drafts</mat-icon><span class="nav-caption">Record New Test</span>
       </a>
-      <a mat-list-item routerLink="/viewTest" (click)="sidenav.toggle()">
+      <a class="nav-item" mat-list-item routerLink="/viewTest" (click)="sidenav.toggle()">
         <mat-icon>description</mat-icon><span class="nav-caption">View Test Result</span>
       </a>
     </mat-nav-list>
