--- a/src/app/manage-testkit-list/manage-testkit-list.component.html
+++ b/src/app/manage-testkit-list/manage-testkit-list.component.html
@@ -15,4 +15,4 @@
 
 </mat-accordion>
 
-<p class="info-text mat-body-1" *ngIf ="testkits.length <= 0" >No testkit added yet</p>
+<p class="info-text mat-body-1" *ngIf ="testkits.length <= 0" style="color:white;">No testkit added yet</p>
