--- a/src/app/testcentre-register/testcentre-register.component.css
+++ b/src/app/testcentre-register/testcentre-register.component.css
@@ -40,7 +40,7 @@ mat-card{
   float: left;
   padding: 30px 30px;
   width: 100%;
-  background: #ffc05f;
+  background: white;
   border-radius: 10px;
   transform: scale(1);
   -webkit-transform: scale(1);
