--- a/src/app/user-register/user-register.component.css
+++ b/src/app/user-register/user-register.component.css
@@ -5,7 +5,7 @@
   float: left;
   padding: 30px 10px;
 
-  background: #ffc05f;
+  background: white;
   border-radius: 10px;
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -57,7 +57,7 @@
   text-align: center;
   display: block;
   font-weight: 700;
-  color: #fff7fa;
+  color: black;
   padding: 20px 0px;
   margin-bottom: 20px;
 }
@@ -89,5 +89,5 @@ mat-form-field{
 
 
 mat-card-header{
-background-color:   #FF826C;
+background-color:   white;
 }
