--- a/src/app/testcentre/testcentre.component.html
+++ b/src/app/testcentre/testcentre.component.html
@@ -1,5 +1,5 @@
 
-  <h1>Test Manager Workspace</h1>
+  <h1 style="color:white">Test Manager Workspace</h1>
 
   <mat-grid-list cols="2"    rowHeight="300px">
     <mat-grid-tile>
