--- a/src/app/view-test/view-test.component.html
+++ b/src/app/view-test/view-test.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <h1>Covid-19 Test Result</h1>
+  <h1 style="color:white">Covid-19 Test Result</h1>
   <mat-dialog-content>
   <mat-card style="padding:30px 80px">
     <h2>Covid-19 Test Report Card</h2>
