--- a/src/app/record-officer-list/record-officer-list.component.html
+++ b/src/app/record-officer-list/record-officer-list.component.html
@@ -41,4 +41,4 @@
 
 
 
-<p class="info-text mat-body-1" *ngIf ="officers.length <= 0">No tester added yet</p>
+<p class="info-text mat-body-1" *ngIf ="officers.length <= 0" style="color:white;">No tester added yet</p>
