--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,15 +3,17 @@ mat-icon {
   font-size: 24px;
   margin: 5px 5px;
 }
+/*
 main {
   background-image: linear-gradient(180deg, #3196e2, #53d2dc);
-  height: 100%;
+  /*height: 100%;
   margin-top: 2rem;
-  width: 80%;
+  width: 100%;
   margin:auto;
   margin-bottom: 80px;
+  height: 97vh;
 
-}
+}*/
 
 .title {
   font-size: 30px;
@@ -39,7 +41,9 @@ mat-sidenav-content {
  margin: 0 auto;
  overflow-x: hidden;
  width: 100%;
- margin-bottom: 50px;
+padding-bottom: 60px;
+ height: 100% ;
+
    /* height: 100%;
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url("/assets/b.jpg") no-repeat center;
   background-size: cover;
