--- a/src/app/testcentre-register/testcentre-register.component.html
+++ b/src/app/testcentre-register/testcentre-register.component.html
@@ -1,18 +1,23 @@
+<div class=" register-wrapper"  >
 
     <mat-card class="box">
       <mat-card-header>
         <mat-card-title>Register Test Centre</mat-card-title>
       </mat-card-header>
 
-      <form class="form" >
+      <form class="form"  class="registerform" (submit)= "onRegisterTestCentre(registerForm)" #registerForm="ngForm" >
         <mat-card-content>
           <mat-form-field class="input-field">
             <input matInput name="centrename" [(ngModel)]="enteredCentre" required minlength="3" #centrename="ngModel" placeholder="Enter Test Centre Name">
             <mat-error *ngIf= "centrename.invalid"> Please enter test center name with at least 3 characters</mat-error>
           </mat-form-field>
         </mat-card-content>
-        <button mat-raised-button color="primary"  (click)="onAddCentre()" class="btn-block">Register</button>
+        <mat-action-row>
+        <span class="example-spacer"></span>
+        <button mat-raised-button color="primary" style="margin-left:10px ;" (click)="onAddCentre()" >Register</button>
+        <button mat-raised-button color="basic"  style="margin-left:10px ;" routerLink="/testcentre">Cancel</button>
+        </mat-action-row>
       </form>
     </mat-card>
 
-
+  </div>
