--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+/*
 html,
 body {
   height: 100%;
@@ -8,6 +8,21 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}*/
+html {
+  margin: 0 auto;
+  padding: 0;
+  overflow-x: hidden;
+  height: 100%;
+  max-height: fit-content;
+  background-image: linear-gradient(180deg, #3196e2, #53d2dc);
+}
+body {
+  margin: 0 auto;
+  overflow-x: hidden;
+  width: 100%;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-image: linear-gradient(180deg, #3196e2, #53d2dc);
 }
 h1 {
   text-align: center;
