--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,17 +3,15 @@ mat-icon {
   font-size: 24px;
   margin: 5px 5px;
 }
-/*
 main {
   background-image: linear-gradient(180deg, #3196e2, #53d2dc);
-  /*height: 100%;
+  height: 100%;
   margin-top: 2rem;
-  width: 100%;
+  width: 80%;
   margin:auto;
   margin-bottom: 80px;
-  height: 97vh;
 
-}*/
+}
 
 .title {
   font-size: 30px;
@@ -41,9 +39,7 @@ mat-sidenav-content {
  margin: 0 auto;
  overflow-x: hidden;
  width: 100%;
-padding-bottom: 60px;
- height: 100% ;
-
+ margin-bottom: 50px;
    /* height: 100%;
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url("/assets/b.jpg") no-repeat center;
   background-size: cover;
