--- a/src/app/update-test-result/update-test-result.component.html
+++ b/src/app/update-test-result/update-test-result.component.html
@@ -130,31 +130,31 @@
         <div fxFlex="50" style="margin-right:10px;">
           <h4>Admit Date</h4>
           <mat-form-field appearance="fill">
-            <mat-label></mat-label>
+            <mat-label>2/10/2020</mat-label>
             <input matInput disabled>
           </mat-form-field>
           <h4>Hospital</h4>
           <mat-form-field appearance="fill">
-            <mat-label></mat-label>
+            <mat-label>-</mat-label>
             <input matInput disabled>
           </mat-form-field>
         </div>
         <div fxFlex="50" style="margin-right:10px;">
           <h4>Date of symptom onset</h4>
           <mat-form-field appearance="fill">
-            <mat-label></mat-label>
+            <mat-label>1/10/2020</mat-label>
             <input matInput disabled>
           </mat-form-field>
           <h4>Hospitalized? </h4>
           <mat-form-field appearance="fill">
-            <mat-label></mat-label>
+            <mat-label>No</mat-label>
             <input matInput disabled>
           </mat-form-field>
         </div>
       </div>
       <h4>Symptoms</h4>
       <mat-form-field appearance="fill">
-        <mat-label></mat-label>
+        <mat-label>Cough</mat-label>
         <input matInput disabled>
       </mat-form-field>
       <mat-divider></mat-divider>
