--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,63 +1,42 @@
 
 
-
 .box {
-  position: relative;
-  float: left;
   padding: 30px 10px;
-  width: 100%;
+
   background: white;
   border-radius: 10px;
-  transform: scale(1);
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  z-index: 5;
-  max-width: 330px;
-  margin-top: 20px;
+  margin-bottom: 30px;
+
+}
+h1{
+  color: #fff7fa;
 }
 
-/*.box.back {
-  transform: scale(.95);
-  -webkit-transform: scale(.95);
-  -ms-transform: scale(.95);
-  top: -20px;
-  opacity: .8;
-  z-index: -1;
-}
+.register-wrapper{
 
-.box:before {
-  content: "";
-  width: 100%;
-  height: 30px;
-  border-radius: 10px;
-  position: absolute;
-  top: -10px;
-  background: rgba(255, 255, 255, .6);
-  left: 0;
-  transform: scale(.95);
-  -webkit-transform: scale(.95);
-  -ms-transform: scale(.95);
-  z-index: -1;
-}
-.login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
-  padding: 0.8375em 0;
-}
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url("/assets/img.jpg") no-repeat center;
+  /* Full height */
+  height: 100%;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 50px;
 
-*/
-.login-wrapper .loginform {
+}
+ .registerform {
   min-width: 100%;
-  max-width: 300px;
+ max-width: 400px;
+  width: 100%;
+  height: 100%;
+}
+
+.register-wrapper .input-field{
   width: 100%;
 }
 
-.login-wrapper .input-field,
-.login-wrapper .btn-block {
-  width: 100%;
-}
-
-.login-wrapper mat-card-header {
+.register-wrapper mat-card-header {
   text-align: center;
-  width: 100%;
   display: block;
   font-weight: 700;
   color: black;
@@ -65,20 +44,36 @@
   margin-bottom: 20px;
 }
 
-.login-wrapper mat-card-header mat-card-title {
+.register-wrapper mat-card-header mat-card-title {
   font-size: 30px;
   margin: 0;
 }
 
-.login-wrapper .mat-card {
-  padding: 30px 40px 30px;
+.register-wrapper .mat-card {
+  padding: 20px 30px 30px;
 }
 
-.login-wrapper .mat-stroked-button {
+.register-wrapper .mat-stroked-button {
   border: 1px solid currentColor;
   line-height: 54px;
   background: #fff7fa;
 }
+
+mat-form-field{
+  margin: 5px 0px;
+}
+
+.btn-block{
+  margin-top: 10px;
+
+  width: 100%;
+}
+
+
+mat-card-header{
+background-color:   white;
+}
+
 
 .sign {
   padding-top: 30px;
@@ -86,12 +81,5 @@
 }
 .sign a {
   color: #3196e2;
+  text-decoration: none;
 }
-
-mat-form-field{
-  margin: 5px 0px;
-}
-
-mat-card-header{
-  background-color:   white;
-  }
