--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,29 +1,30 @@
-<div class=" login-wrapper" fxLayout="row" fxLayoutAlign="center center">
+
+
+<div class=" register-wrapper" fxLayout.md="column" fxLayoutAlign="center center" fxLayoutGap="30px" fxLayoutGap.xs="0">
 
   <mat-card class="box">
     <mat-card-header>
-      <mat-card-title>Log in</mat-card-title>
+      <mat-card-title>Login</mat-card-title>
     </mat-card-header>
 
-    <form class="loginform" (submit)= "onLogin(loginForm)" #loginForm="ngForm">
+    <form class="form" class="registerform" (submit)= "onLogin(loginForm)" #loginForm="ngForm">
       <mat-card-content>
         <mat-form-field class="input-field">
-          <input matInput name="username" ngModel required minlength="3" #username="ngModel" placeholder="Username">
-          <mat-error *ngIf= "username.invalid"> Please enter a username</mat-error>
+          <input matInput type="username" name="username" #emailInput="ngModel" ngModel required placeholder="Email">
+          <mat-error *ngIf="emailInput.invalid"> Please enter valid email</mat-error>
         </mat-form-field>
-
         <mat-form-field class="input-field">
-          <input matInput name="password" type="password" placeholder="Password" ngModel required minlength="6" #password="ngModel">
-          <mat-error *ngIf= "password.invalid"> Please enter a password</mat-error>
+          <input matInput type="password" name="password" placeholder="Password" minlength="6" ngModel #passwordInput="ngModel"
+            required>
+          <mat-error *ngIf="passwordInput.invalid"> Please enter valid password</mat-error>
         </mat-form-field>
       </mat-card-content>
-      <button mat-raised-button color="primary" class="btn-block">Log in</button>
+
+      <button mat-raised-button color="primary" class="btn-block">Login</button>
     </form>
-
     <mat-card-footer class="sign">
-    <p>Don't have any account? <a routerLink="/register">Sign Up Now</a></p>
-  </mat-card-footer>
+      <p>Doesn't have any account? <a routerLink="/register">Sign Up Now</a></p>
+    </mat-card-footer>
   </mat-card>
-
 
 </div>
