--- a/src/app/manage-testkit-list/manage-testkit-list.component.html
+++ b/src/app/manage-testkit-list/manage-testkit-list.component.html
@@ -9,8 +9,8 @@
    <!-- <p>Number of stock: {{testkit.stock}}</p>-->
     <mat-action-row>
       <span class="example-spacer"></span>
-      <button mat-button color="primary" routerLink="/create">EDIT</button>
-      <button mat-button color="warn"  routerLink="/list">DELETE</button>
+      <button mat-button color="primary" >EDIT</button>
+      <button mat-button color="warn"  >DELETE</button>
     </mat-action-row>
 
   </mat-expansion-panel>
