--- a/src/app/manage-testkit/manage-testkit.component.html
+++ b/src/app/manage-testkit/manage-testkit.component.html
@@ -8,13 +8,13 @@
     <form class="registerform" (submit)= "onAddTestkit (testKitForm)" #testKitForm="ngForm" >
       <mat-card-content>
         <mat-form-field class="input-field">
-          <input matInput name="testkitName" ngModel required minlength="3" #namekit="ngModel" placeholder="Test Kit Name">
+          <input matInput name="testkitName" ngModel required minlength="3" #namekit="ngModel" [ngModel]= "testkit?.testkitName" placeholder="Test Kit Name">
           <mat-error *ngIf= "namekit.invalid"> Please enter a valid test kit name</mat-error>
         </mat-form-field>
 
         <mat-form-field class="input-field">
 
-          <input matInput  type="number" name="stock" ngModel required minlength="1" #stock="ngModel" placeholder="Stock">
+          <input matInput  type="number" name="stock" ngModel required minlength="1" #stock="ngModel" [ngModel]= "testkit?.stock" placeholder="Stock">
           <mat-error *ngIf= "stock.invalid"> Please enter a number of stock</mat-error>
         </mat-form-field>
 
