--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" >
       <mat-icon>menu</mat-icon>
     </button>
-    <a color="basic" routerLink="/home" class="title">
+    <a color="basic" routerLink="/homepage" class="title">
       <mat-icon> coronavirus</mat-icon> CTS</a>
     <span class="menu-spacer"></span>
     <div fxShow="true" fxHide.lt-md ><!--fxHide.lt-md-->
