--- a/src/app/record-officer/record-officer.component.html
+++ b/src/app/record-officer/record-officer.component.html
@@ -14,7 +14,7 @@ fxLayoutGap.xs="0">
         <div class="item item-1" fxFlex="50%" fxLayoutGap="30px">
         <mat-form-field class="input-field">
           <mat-label>Tester Centre Name</mat-label>
-          <input matInput disabled value="TestCentre">
+          <input matInput readonly name="centreName" value="Centrename">
         </mat-form-field>
         <mat-form-field class="input-field">
           <mat-label>Position</mat-label>
