--- a/src/app/testcentre-register/testcentre-register.component.html
+++ b/src/app/testcentre-register/testcentre-register.component.html
@@ -1,23 +1,26 @@
-<div class=" register-wrapper"  >
 
-    <mat-card class="box">
-      <mat-card-header>
-        <mat-card-title>Register Test Centre</mat-card-title>
-      </mat-card-header>
 
-      <form class="form"  class="registerform" (submit)= "onRegisterTestCentre(registerForm)" #registerForm="ngForm" >
-        <mat-card-content>
-          <mat-form-field class="input-field">
-            <input matInput name="centrename" [(ngModel)]="enteredCentre" required minlength="3" #centrename="ngModel" placeholder="Enter Test Centre Name">
-            <mat-error *ngIf= "centrename.invalid"> Please enter test center name with at least 3 characters</mat-error>
-          </mat-form-field>
-        </mat-card-content>
+<div class=" register-wrapper" fxLayout.md="column" fxLayoutAlign="center center" fxLayoutGap="30px" fxLayoutGap.xs="0">
 
-        <span class="example-spacer"></span>
-        <button mat-raised-button color="primary" style="margin-left:10px ;" (click)="onAddCentre()" >Register</button>
+  <mat-card class="box">
+    <mat-card-header>
+      <mat-card-title>Register Test Centre</mat-card-title>
+    </mat-card-header>
+
+    <form class="form" class="registerform"  #loginForm="ngForm">
+      <mat-card-content>
+        <mat-form-field class="input-field">
+
+          <input matInput required  type="text"name="centreName" value="Centrename" placeholder="Test Centre Name" ngModel #testCentreInput="ngModel">
+          <mat-error *ngIf="testCentreInput.invalid"> Please enter valid test centre name</mat-error>
+        </mat-form-field>
+
+      </mat-card-content>
+      <span class="example-spacer"></span>
+        <button mat-raised-button color="primary" style="margin-left:10px ;"  >Register</button>
         <button mat-raised-button color="basic"  style="margin-left:10px ;" routerLink="/testcentre">Cancel</button>
 
-      </form>
-    </mat-card>
+    </form>
+  </mat-card>
 
-  </div>
+</div>
