--- a/src/app/testcentre/testcentre.component.html
+++ b/src/app/testcentre/testcentre.component.html
@@ -1,8 +1,44 @@
 
 
 <h1 style="color:white">Test Manager Workspace</h1>
+<div class=" register-wrapper" fxLayout.md="column" fxLayoutAlign="center center" fxLayoutGap="20px" fxLayoutGap.xs="0">
 
-  <mat-grid-list cols="2"    rowHeight="300px">
+  <mat-card class="box">
+
+    <form class="form" class="registerform"  #loginForm="ngForm">
+      <mat-card-content>
+        <mat-form-field class="input-field">
+          <mat-card-subtitle>Fullname</mat-card-subtitle>
+          <input matInput readonly name="fullname" value="fullname">
+        </mat-form-field>
+        <mat-form-field class="input-field">
+          <mat-card-subtitle>Username</mat-card-subtitle>
+          <input matInput readonly name="username" value="username">
+        </mat-form-field>
+        <mat-form-field class="input-field">
+          <mat-card-subtitle>Email</mat-card-subtitle>
+          <input matInput readonly name="email" value="email">
+        </mat-form-field>
+        <mat-form-field class="input-field">
+          <mat-card-subtitle>Password</mat-card-subtitle>
+          <input matInput readonly type="text" name="password" value="password">
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-subtitle>Test Centre </mat-card-subtitle>
+      <button mat-raised-button color="primary"  routerLink="/rCentre">Add</button>
+
+    </form>
+   <!-- <mat-card-footer class="sign">
+      <p>Doesn't have any account? <a routerLink="/register">Sign Up Now</a></p>
+    </mat-card-footer>-->
+  </mat-card>
+
+</div>
+
+
+
+
+  <!-- <mat-grid-list cols="2"    rowHeight="300px">
     <mat-grid-tile>
 
       <div class="control-cont" >
@@ -13,12 +49,12 @@
         <mat-form-field>
           <mat-label>Username</mat-label>
           <input matInput disabled value="TestManager-KL">
-          <!--<input formControlName="username" matInput placeholder="Username"/>-->
+
         </mat-form-field>
         <mat-form-field>
           <mat-label>Email</mat-label>
           <input matInput disabled value="marcushua@gmail.com">
-         <!-- <input formControlName="email" matInput placeholder="Email"/>-->
+
         </mat-form-field>
         <mat-form-field >
           <mat-label>Registered Test Centre</mat-label>
@@ -33,7 +69,7 @@
     <mat-grid-tile *ngIf="display">
     <app-testcentre-register  fxFlex.gt-sm="50%"  [enteredCentre]= "name" (addCentre)="this.name= $event" ></app-testcentre-register>
     </mat-grid-tile>
-  </mat-grid-list>
+  </mat-grid-list> -->
 
 <!--
   <div class=" register-wrapper"
