--- a/src/app/testcentre-register/testcentre-register.component.html
+++ b/src/app/testcentre-register/testcentre-register.component.html
@@ -7,18 +7,18 @@
       <mat-card-title>Register Test Centre</mat-card-title>
     </mat-card-header>
 
-    <form class="form" class="registerform"  #loginForm="ngForm">
+    <form class="form" class="registerform" (submit)= "onAddTestcentre(addForm)"  #addForm="ngForm">
       <mat-card-content>
         <mat-form-field class="input-field">
 
-          <input matInput required  type="text"name="centreName" value="Centrename" placeholder="Test Centre Name" ngModel #testCentreInput="ngModel">
+          <input matInput required  type="text" name="centreName" value="Centrename" placeholder="Test Centre Name" ngModel #testCentreInput="ngModel">
           <mat-error *ngIf="testCentreInput.invalid"> Please enter valid test centre name</mat-error>
         </mat-form-field>
 
       </mat-card-content>
       <span class="example-spacer"></span>
-        <button mat-raised-button color="primary" style="margin-left:10px ;"  >Register</button>
-        <button mat-raised-button color="basic"  style="margin-left:10px ;" routerLink="/testcentre">Cancel</button>
+      <button mat-raised-button color="primary" type="submit" style="margin-left:10px ;"  class="btn-block">Submit</button>
+      <button mat-raised-button color="basic"  type="button" style="margin-left:10px ;" routerLink="/testcentre">Cancel</button>
 
     </form>
   </mat-card>
