--- a/src/app/manage-testkit/manage-testkit.component.html
+++ b/src/app/manage-testkit/manage-testkit.component.html
@@ -24,4 +24,4 @@
   </mat-card>
 </div>
 
-<app-manage-testkit-list></app-manage-testkit-list>
+<button mat-raised-button color="primary" class="btn-block" routerLink="/testkitlist">View List</button>
