--- a/src/app/manage-testkit/manage-testkit.component.html
+++ b/src/app/manage-testkit/manage-testkit.component.html
@@ -5,16 +5,16 @@
       <mat-card-title> Test Kit Stock</mat-card-title>
     </mat-card-header>
 
-    <form class="registerform" (submit)= "onAddTestkit (testKitForm)" #testKitForm="ngForm" >
+    <form class="registerform" (submit)= "onUpdateTest (testKitForm)" #testKitForm="ngForm" >
       <mat-card-content>
         <mat-form-field class="input-field">
-          <input matInput name="testkitName" ngModel required minlength="3" #namekit="ngModel" [ngModel]= "testkit?.testkitName" placeholder="Test Kit Name">
+          <input matInput name="testkitName"  required minlength="3" #namekit="ngModel" [ngModel]= "testkit?.testkitName" placeholder="Test Kit Name">
           <mat-error *ngIf= "namekit.invalid"> Please enter a valid test kit name</mat-error>
         </mat-form-field>
 
         <mat-form-field class="input-field">
 
-          <input matInput  type="number" name="stock" ngModel required minlength="1" #stock="ngModel" [ngModel]= "testkit?.stock" placeholder="Stock">
+          <input matInput  type="number" name="stock"  required minlength="1" #stock="ngModel" [ngModel]= "testkit?.stock" placeholder="Stock">
           <mat-error *ngIf= "stock.invalid"> Please enter a number of stock</mat-error>
         </mat-form-field>
 
@@ -23,5 +23,5 @@
     </form>
   </mat-card>
 </div>
-
-<button mat-raised-button color="primary" class="btn-block" routerLink="/testkitlist">View List</button>
+<button routerLink="/testkitlist">List</button>
+<app-manage-testkit-list></app-manage-testkit-list>
