--- a/src/app/manage-testkit-list/manage-testkit-list.component.html
+++ b/src/app/manage-testkit-list/manage-testkit-list.component.html
@@ -5,7 +5,7 @@
 
     </mat-expansion-panel-header>
    <!-- <mat-label>Number of stocks: {{testkit.stock}}</mat-label>-->
-    <input matInput disabled value="Number of stocks: {{testkit.stock}}" >
+    <input matInput readonly value="Number of stocks: {{testkit.stock}}" >
    <!-- <p>Number of stock: {{testkit.stock}}</p>-->
     <mat-action-row>
       <span class="example-spacer"></span>
