--- a/src/app/manage-testkit/manage-testkit.component.html
+++ b/src/app/manage-testkit/manage-testkit.component.html
@@ -23,5 +23,5 @@
     </form>
   </mat-card>
 </div>
-<button routerLink="/testkitlist">List</button>
+<!-- <button routerLink="/testkitlist">List</button> -->
 <app-manage-testkit-list></app-manage-testkit-list>
